--- a/config/gtk-3.0/gtk.css
+++ b/config/gtk-3.0/gtk.css
@@ -1,3 +1,10 @@
 #pulseaudio-button * {
-    -gtk-icon-transform: scale(.5);
+  -gtk-icon-transform: scale(.5);
+}
+.tasklist button image {
+  -gtk-icon-transform:scale(0.75);
+  opacity:1;
+}
+#whiskermenu-button image {
+  -gtk-icon-transform:scale(0.8);
 }
